tests/ui/fail/slice_first_mut.rs
//@error-in-other-file: Unsat
//@compile-flags: -C debug-assertions=off
//@rustc-env: THRUST_SOLVER=tests/thrust-pcsat-wrapper

#[thrust::trusted]
#[thrust_macros::requires(true)]
#[thrust_macros::ensures(
    (*result).2 > 0 && (*result).0[(*result).1] == 10
)]
fn slice() -> &'static mut [i32] {
    unimplemented!()
}

fn main() {
    let slice = slice();
    *slice.first_mut().unwrap() = 11;
    assert!(*slice.first().unwrap() == 12);
}
